// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/custom_status/custom_status_emoji should match snapshot 1`] = `
<div>
  <button
    class="statusSuggestion__row cursor--pointer"
    tabindex="0"
  >
    <div
      class="statusSuggestion__icon"
    />
  </button>
</div>
`;

exports[`components/custom_status/custom_status_emoji should match snapshot with duration 1`] = `
<div>
  <button
    class="statusSuggestion__row cursor--pointer"
    tabindex="0"
  >
    <div
      class="statusSuggestion__icon"
    />
    <span
      class="statusSuggestion__duration"
    >
      Today
    </span>
  </button>
</div>
`;
